--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ h2{
 </style></head>
 <body><div id="content">
     <h1>プライバシー・ポリシー</h1>
-    <p>当社は、以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、全従業員に個人情報保護の重要性の認識と取組みを徹底させることにより、個人情報の保護を推進致します。</p>
+    <p>以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、全従業員に個人情報保護の重要性の認識と取組みを徹底させることにより、個人情報の保護を推進致します。</p>
 
     <h2>利用者情報の取得<span style="color:#b00;font-size:12px"></span></h2>
     <p>本アプリが利用者の個人情報を取得することはありません。</p>
