--- a/index.html
+++ b/index.html
@@ -25,15 +25,25 @@ h2{
     <p>以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、個人情報保護の重要性の認識と取組みを徹底することにより、個人情報の保護を推進致します。</p>
 
     <h2>利用者情報の取得<span style="color:#b00;font-size:12px"></span></h2>
-    <p>本アプリが利用者の個人情報を取得することはありません。</p>
+    <p>端末情報: 利用者の端末を識別するIDやOSのバージョンなどの端末に関する情報</p>
+    <p>広告識別子: Advertising Identifier(iOS)</p>
+    <p>お問合せに関する情報: 本アプリのIDやご利用の端末に関する情報などお問い合わせ入力フォームにて記載いただく情報、当社から追加で依頼する確認事項、メールアドレス</p>
 
     <h2>利用者情報の利用目的</h2>
-    <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
+    <ul>
+        <li>お問合せ対応のため</li>
+        <li>利用者に適した広告配信のため</li>
+        <li>広告掲載効果測定のため</li>
+    <ul/>
 
-    <h2>使用ツール</h2>
-    <p>本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobが利用者の情報を自動取得する場合があります。取得する情報、利用目的、第三者への提供等につきましては、広告配信事業者のアプリケーション・プライバシーポリシーよりご確認ください。</p>
+    <h2>取得情報の送信停止</h2>
+    <p>本アプリによる取得情報の自動取得を停止する手段を提供していません。取得情報の自動送信を停止したい場合は、本アプリをアンインストールして下さい。</p>
+    
+    <h2>改定</h2>
+        <p>本アプリケーションプライバシーポリシーの全部または一部を改定することがあります。重要な変更がある場合には、その内容を告知することと致します。</p>
+        
 
     <h2>お問い合せ</h2>
-    <p>何かご不明な点がございましたら下記までご連絡ください。</p>
+    <p>記載のない項目について、正当な理由に基づきお問い合わせ頂ければ遅滞なく回答いたしますので下記までご連絡ください。</p>
     <p>dazhong7010@gmail.com</p>
 </div></body></html>
